--- a/style.css
+++ b/style.css
@@ -1,61 +1,16 @@
-/* nous appelons la police d'écriture par Google font*/
-/*@import url(https://fonts.googleapis.com/css?family=Nunito);*/
-
-*, *:before, *:after {
-  box-sizing: inherit;
-  }
-
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 html {
   height: 100%;
-  overflow: hidden;
   box-sizing: border-box;
 }
 
 body { 
   margin:0;
   padding:0;
-  perspective: 1px;
-  transform-style: preserve-3d;
-  height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
   font-family: Patrick Hand;
 }
-
-h1 {
-   font-size: 250%;
-   text-align: justify;
-}
-
-h2 {
-    font-size: 150%;
-    color : #111111;
-}
-
-h3 {
-  font-size: 100%;
-  color : rgb(19, 18, 18);
-  text-align: justify;
-}
-
-p {
-  font-size: 140%;
-  line-height: 150%;
-  color:rgb(19, 18, 18);
-  text-align: justify;
-}
-
-li {
-  color: rgb(19, 18, 18);
-  list-style-type: none;
-  text-align: justify;
-}
-
-iframe {
-  float: right;
-  transform: translateZ(.4px) scale(1)           translateX(0%) translateY(-20%) rotate(0deg);
-}
-
 .Wild {
   display: flex;
   justify-content: center;
@@ -63,14 +18,145 @@ iframe {
 }
 
 .Wild a img {
-    display: block;
-    margin-top: -250px;
+    display: flex;
+    margin-top: -1600px;
     transform: translateZ(.25px) scale(.75);
     height: 16%;
-    margin-left: 55px;
+    margin-left: -115px;
 }
 
-/* Début du slide pour l'effet parallax*/
+
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.wrapper .sidebar{
+  width: 200px;
+  height: 100%;
+  background: red;
+  padding: 30px 0px;
+  position: fixed;
+}
+.wrapper .sidebar img{
+  border-radius: 100%;
+  margin-left: 57%;
+  height: 20%;
+}
+
+.wrapper .sidebar h2{
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.wrapper .sidebar ul li{
+  padding: 15px;
+  margin: 1%;
+  text-align: center;
+  border-bottom: 1px solid gray;
+  border-bottom: 1px solid rgba(255,255,255,0.05);
+  border-top: 1px solid rgba(255,255,255,0.05);
+  margin-right: 25%;
+}    
+
+.wrapper .sidebar ul li a{
+  color: #fff;
+  display: block;
+}
+
+.wrapper .sidebar ul li a .fas{
+  width: 25px;
+}
+
+.wrapper .sidebar ul li:hover{
+  background-color: gray;
+}
+    
+.wrapper .sidebar ul li:hover a{
+  color: #fff;
+}
+ 
+.wrapper .sidebar .social_media{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.wrapper .sidebar .social_media a{
+  display: inline-flex;
+  border-radius: 100%;
+  width: 0px;
+  background: gray;
+  height: 0px;
+  line-height: 45px;
+  text-align: center;
+  margin: 0 5px;
+  color: #fff;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.wrapper .main_content{
+  width: 100%;
+  margin-left: 200px;
+}
+
+.wrapper .main_content .header{
+  padding: 20px;
+  background: #fff;
+  color: #717171;
+  border-bottom: 1px solid #e0e4e8;
+}
+
+.wrapper .main_content .info{
+  margin: 20px;
+  color: #717171;
+  line-height: 25px;
+}
+
+.wrapper .main_content .info div{
+  margin-bottom: 20px;
+}
+h1 {
+  font-size: 250%;
+  text-align: justify;
+}
+
+h2 {
+   font-size: 150%;
+   color : #111111;
+}
+
+h3 {
+ font-size: 100%;
+ color : rgb(19, 18, 18);
+ text-align: justify;
+}
+
+p {
+ font-size: 140%;
+ line-height: 150%;
+ color:rgb(19, 18, 18);
+ text-align: justify;
+}
+
+li {
+ color: rgb(19, 18, 18);
+ list-style-type: none;
+ text-align: justify;
+ font-size: 25px;
+}
+
+iframe {
+ float: right;
+ margin-right: 27%;
+ transform: translateZ(.4px) scale(1)           translateX(0%) translateY(-20%) rotate(0deg);
+}
 .slide {
   position: relative;
   padding: 25vh 10%;
@@ -80,13 +166,12 @@ iframe {
   box-shadow: 0 -1px 10px rgba(0, 0, 0, .7);
   transform-style: inherit;
 }
-
-img {
-  position: absolute;
+.slide img {
+  
   top: 50%;
   left: 35%;
-  width: 320px;
-  height: 240px;
+  width: 520px;
+  height: 440px;
   -moz-transform: translateZ(.25px) scale(.75)         translateX(-94%) translateY(-100%) rotate(2deg);
   -webkit-transform: translateZ(.25px) scale(.75)         translateX(-94%) translateY(-100%) rotate(2deg);
   transform: translateZ(.25px) scale(.75)         translateX(-94%) translateY(-100%) rotate(2deg);
@@ -94,12 +179,11 @@ img {
   border-radius: 5px;
   background: rgba(240,230,220, .7);
   box-shadow: 0 0 8px rgba(0, 0, 0, .7);
+  position: absolute;
 }
-
 img:last-of-type {
   transform: translateZ(.4px) scale(.6)           translateX(-104%) translateY(-40%) rotate(-5deg);
 }
-
 .slide:before {
   content: "";
   position: absolute;
@@ -109,7 +193,6 @@ img:last-of-type {
   right: 0;
   box-shadow: 0 0 8px 1px rgba(0, 0, 0, .7);
 }
-
 .title {
   width: 50%;
   padding: 5%;
@@ -118,7 +201,6 @@ img:last-of-type {
   box-shadow: 0 0 8px rgba(0, 0, 0, .7);
   margin-left: 38%;
 }
-
 .slide:nth-child(2n) .title {
   margin-right: auto;
 }
@@ -127,11 +209,9 @@ img:last-of-type {
   margin-left: auto;
   margin-right: 38%;
 }
-
 .slide, .slide:before {
   background: 50% 50% / cover;  
 }
-
 .header {
   text-align: center;
   font-size: 175%;
@@ -139,59 +219,62 @@ img:last-of-type {
   text-shadow: 0 2px 2px #000;
   line-height: 49px;
 }
-
 #title {
-  background-image: url("https://www.set.fr/sites/default/files/Mame.jpg");
-  z-index:2;
-}
+  background-image: url("https://i.imgur.com/bjFLhq1.jpg");
+  z-index: 2;
+  margin: 0 auto;
+  height: 950px;
 
+}
 #title h1 {
-   -moz-transform: translateZ(.25px) scale(.75);
-  -webkit-transform: translateZ(.25px) scale(.75);
- transform: translateZ(.25px) scale(.75);
-  -moz-transform-origin: 50% 100%;
-  -webkit-transform-origin: 50% 100%;
- transform-origin: 50% 100%;
- text-shadow: 8px 5px 9px black;
- color: #F76C6C;
- font-family: 'Permanent Marker', cursive;
- font-size: 100px;
- margin-left: 25%;
+  -moz-transform: translateZ(.25px) scale(.75);
+ -webkit-transform: translateZ(.25px) scale(.75);
+transform: translateZ(.25px) scale(.75);
+ -moz-transform-origin: 50% 100%;
+ -webkit-transform-origin: 50% 100%;
+transform-origin: 50% 100%;
+text-shadow: 8px 5px 9px black;
+color: #F76C6C;
+font-family: 'Permanent Marker', cursive;
+font-size: 100px;
+margin-top: 0;
+margin-left: 25%;
 }
 
 #title h2 {
-  -moz-transform: translateZ(.22px) scale(.80);
-  -webkit-transform: translateZ(.22px) scale(.80);
- transform: translateZ(.22px) scale(.80);
- transform-origin: 50% 100%;
- color: #F76C6C;
- text-shadow: 5px 8px 7px #000;
- font-family: 'Patrick Hand', cursive;
- font-size: 60px;
+ -moz-transform: translateZ(.22px) scale(.80);
+ -webkit-transform: translateZ(.22px) scale(.80);
+transform: translateZ(.22px) scale(.80);
+transform-origin: 50% 100%;
+color: #F76C6C;
+text-shadow: 5px 8px 7px #000;
+font-family: 'Patrick Hand', cursive;
+font-size: 60px;
+margin-left: 23%;
+margin-top: 28%;
 }
-
 div#slide1{
   background-image: url(https://i.imgur.com/0wNudn6.png);
-  transform: translateZ(-1px) scale(2);
+  z-index: 2;
 }
+div#slide1 .title{
+  margin: 15%;
+} 
 
-
-#slide1:before {
-  transform: translateZ(-1px) scale(2);
-}
 #slide2 {
-  background-image: url("https://lorempixel.com/640/480/abstract/4/");
+  background-image: url("https://i.imgur.com/YXswNfg.jpg");
   z-index:2;
 }
 div#slide3{
   background-image: url(https://i.imgur.com/4u5PR3g.png);
-  transform: translateZ(-1px) scale(2);
+  z-index: 2;
 }
-
+#title2 {
+  margin-left: 550px;
+}
 #slide4 {
-  background: #CC3300;
+  background: #222;
   height: 130vh;
-  border-top: 5px solid gray;
 }
 /* Fin du slide pour l'effet parallax*/
 
@@ -204,8 +287,8 @@ div#slide3{
   color: #fff;
 }
 form {
-
-  width: 93%;
+  margin-right: 50%;
+  width: 85%;
     background: rgba(255, 255, 255, 0.6);
     box-shadow: 2px 2px 8px white, inset 35px 21px 72px grey;
     border: 1px solid #F76C6C;
@@ -221,7 +304,8 @@ fieldset {
 input {
   display: block;
   width: 83%;
-  margin: 10px 89px;
+  margin: 10px 90px;
+  margin-left: 100px;
   border-radius: 11px;
   box-shadow: 1px 2px 2px black;
   padding-left: 5px;
@@ -229,6 +313,7 @@ input {
 }
 
 select {
+  margin-right: 90px;
   box-shadow: 1px 2px 2px black;
   width: 83%;
   /*margin-left: -92px;*/
@@ -237,6 +322,7 @@ select {
 }
 
 textarea {
+  margin-right: 90px;
   box-shadow: 1px 2px 2px black;
   width: 83%;
   /*margin-left: -30px;*/
@@ -252,6 +338,7 @@ textarea {
 }
 
 button {
+  margin-right: 90px;
 	cursor: pointer;
 	position: relative;
 	border-radius: 3.75rem;
