--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ img:last-of-type {
  color: #F76C6C;
  font-family: 'Permanent Marker', cursive;
  font-size: 100px;
- margin-left: 25%;
+ margin-left: 16%;
 }
 
 #title h2 {
@@ -186,10 +186,15 @@ div#slide1{
 div#slide3{
   background-image: url(https://i.imgur.com/4u5PR3g.png);
   transform: translateZ(-1px) scale(2);
+  /*Ombres sous le texte*/
+  text-shadow: 1px 2px 4px grey;
 }
 
 #slide4 {
-  background: #CC3300;
+  background-image:-moz-linear-gradient(30deg, white, black);
+  background-image:-webkit-linear-gradient(30deg, white, black);
+  background-image:-o-linear-gradient(30deg, white, black);
+  background-image:linear-gradient(60deg, white, black);
   height: 130vh;
   border-top: 5px solid gray;
 }
@@ -212,6 +217,7 @@ form {
     border-radius: 25px;
     display: flex;
     flex-flow: column;
+    margin: auto;
 }
 
 fieldset {
@@ -221,7 +227,7 @@ fieldset {
 input {
   display: block;
   width: 83%;
-  margin: 10px 89px;
+  margin: auto;
   border-radius: 11px;
   box-shadow: 1px 2px 2px black;
   padding-left: 5px;
@@ -239,7 +245,7 @@ select {
 textarea {
   box-shadow: 1px 2px 2px black;
   width: 83%;
-  /*margin-left: -30px;*/
+  margin: auto;
   height: 87px;
   border-radius: 11px;
 }
