nettoyage du code css

--- a/style.css
+++ b/style.css
@@ -143,12 +143,13 @@ img:last-of-type {
 #title {
   background-image: url("https://www.set.fr/sites/default/files/Mame.jpg");
   z-index:2;
+  border-bottom: 2px solid #F76C6C;
 }
 
 #title h1 {
    -moz-transform: translateZ(.25px) scale(.75);
   -webkit-transform: translateZ(.25px) scale(.75);
- transform: translateZ(.25px) scale(.75);
+  transform: translateZ(.25px) scale(.75);
   -moz-transform-origin: 50% 100%;
   -webkit-transform-origin: 50% 100%;
  transform-origin: 50% 100%;
@@ -196,7 +197,7 @@ div#slide3{
   background-image:-o-linear-gradient(30deg, white, black);
   background-image:linear-gradient(60deg, white, black);
   height: 130vh;
-  border-top: 5px solid gray;
+  border-top: 2px solid #F76C6C;
 }
 /* Fin du slide pour l'effet parallax*/
 
@@ -232,14 +233,6 @@ input {
   box-shadow: 1px 2px 2px black;
   padding-left: 5px;
   height: 39px;
-}
-
-select {
-  box-shadow: 1px 2px 2px black;
-  width: 83%;
-  /*margin-left: -92px;*/
-  height: 39px;
-  border-radius: 11px;
 }
 
 textarea {
