--- a/style.css
+++ b/style.css
@@ -1,30 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+*, *:before, *:after {
+  box-sizing: inherit;
+  }
+
 html {
   height: 100%;
+  overflow: hidden;
   box-sizing: border-box;
 }
 
 body { 
   margin:0;
   padding:0;
+  perspective: 1px;
+  transform-style: preserve-3d;
+  height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
   font-family: Patrick Hand;
 }
-.Wild {
-  display: flex;
-  justify-content: center;
-  z-index: 2000;
-}
-
-.Wild a img {
-    display: flex;
-    margin-top: -1600px;
-    transform: translateZ(.25px) scale(.75);
-    height: 16%;
-    margin-left: -115px;
-}
-
 
 .wrapper{
   display: flex;
@@ -149,14 +143,26 @@ li {
  color: rgb(19, 18, 18);
  list-style-type: none;
  text-align: justify;
- font-size: 25px;
+}
+iframe {
+  float: right;
+  transform: translateZ(.4px) scale(1)           translateX(0%) translateY(-20%) rotate(0deg);
 }
 
-iframe {
- float: right;
- margin-right: 27%;
- transform: translateZ(.4px) scale(1)           translateX(0%) translateY(-20%) rotate(0deg);
+.Wild {
+  display: flex;
+  justify-content: center;
+  z-index: 2000;
 }
+
+.Wild a img {
+    display: block;
+    margin-top: -250px;
+    transform: translateZ(.25px) scale(.75);
+    height: 16%;
+    margin-left: 55px;
+}
+
 .slide {
   position: relative;
   padding: 25vh 10%;
@@ -166,12 +172,13 @@ iframe {
   box-shadow: 0 -1px 10px rgba(0, 0, 0, .7);
   transform-style: inherit;
 }
-.slide img {
-  
+
+img {
+  position: absolute;
   top: 50%;
   left: 35%;
-  width: 520px;
-  height: 440px;
+  width: 320px;
+  height: 240px;
   -moz-transform: translateZ(.25px) scale(.75)         translateX(-94%) translateY(-100%) rotate(2deg);
   -webkit-transform: translateZ(.25px) scale(.75)         translateX(-94%) translateY(-100%) rotate(2deg);
   transform: translateZ(.25px) scale(.75)         translateX(-94%) translateY(-100%) rotate(2deg);
@@ -179,11 +186,12 @@ iframe {
   border-radius: 5px;
   background: rgba(240,230,220, .7);
   box-shadow: 0 0 8px rgba(0, 0, 0, .7);
-  position: absolute;
 }
+
 img:last-of-type {
   transform: translateZ(.4px) scale(.6)           translateX(-104%) translateY(-40%) rotate(-5deg);
 }
+
 .slide:before {
   content: "";
   position: absolute;
@@ -201,6 +209,7 @@ img:last-of-type {
   box-shadow: 0 0 8px rgba(0, 0, 0, .7);
   margin-left: 38%;
 }
+
 .slide:nth-child(2n) .title {
   margin-right: auto;
 }
@@ -209,9 +218,11 @@ img:last-of-type {
   margin-left: auto;
   margin-right: 38%;
 }
+
 .slide, .slide:before {
   background: 50% 50% / cover;  
 }
+
 .header {
   text-align: center;
   font-size: 175%;
@@ -219,62 +230,63 @@ img:last-of-type {
   text-shadow: 0 2px 2px #000;
   line-height: 49px;
 }
-#title {
-  background-image: url("https://i.imgur.com/bjFLhq1.jpg");
-  z-index: 2;
-  margin: 0 auto;
-  height: 950px;
 
+#title {
+  background-image: url("https://www.set.fr/sites/default/files/Mame.jpg");
+  z-index:2;
 }
+
 #title h1 {
-  -moz-transform: translateZ(.25px) scale(.75);
- -webkit-transform: translateZ(.25px) scale(.75);
-transform: translateZ(.25px) scale(.75);
- -moz-transform-origin: 50% 100%;
- -webkit-transform-origin: 50% 100%;
-transform-origin: 50% 100%;
-text-shadow: 8px 5px 9px black;
-color: #F76C6C;
-font-family: 'Permanent Marker', cursive;
-font-size: 100px;
-margin-top: 0;
-margin-left: 25%;
+   -moz-transform: translateZ(.25px) scale(.75);
+  -webkit-transform: translateZ(.25px) scale(.75);
+ transform: translateZ(.25px) scale(.75);
+  -moz-transform-origin: 50% 100%;
+  -webkit-transform-origin: 50% 100%;
+ transform-origin: 50% 100%;
+ text-shadow: 8px 5px 9px black;
+ color: #F76C6C;
+ font-family: 'Permanent Marker', cursive;
+ font-size: 100px;
+ margin-left: 16%;
 }
 
 #title h2 {
- -moz-transform: translateZ(.22px) scale(.80);
- -webkit-transform: translateZ(.22px) scale(.80);
-transform: translateZ(.22px) scale(.80);
-transform-origin: 50% 100%;
-color: #F76C6C;
-text-shadow: 5px 8px 7px #000;
-font-family: 'Patrick Hand', cursive;
-font-size: 60px;
-margin-left: 23%;
-margin-top: 28%;
+  -moz-transform: translateZ(.22px) scale(.80);
+  -webkit-transform: translateZ(.22px) scale(.80);
+ transform: translateZ(.22px) scale(.80);
+ transform-origin: 50% 100%;
+ color: #F76C6C;
+ text-shadow: 5px 8px 7px #000;
+ font-family: 'Patrick Hand', cursive;
+ font-size: 60px;
 }
+
 div#slide1{
   background-image: url(https://i.imgur.com/0wNudn6.png);
-  z-index: 2;
+  transform: translateZ(-1px) scale(2);
 }
-div#slide1 .title{
-  margin: 15%;
-} 
 
+
+#slide1:before {
+  transform: translateZ(-1px) scale(2);
+}
 #slide2 {
-  background-image: url("https://i.imgur.com/YXswNfg.jpg");
+  background-image: url("https://lorempixel.com/640/480/abstract/4/");
   z-index:2;
 }
 div#slide3{
   background-image: url(https://i.imgur.com/4u5PR3g.png);
-  z-index: 2;
+  /*Ombres sous le texte*/
+  text-shadow: 1px 2px 4px grey;
 }
-#title2 {
-  margin-left: 550px;
-}
+
 #slide4 {
-  background: #222;
+  background-image:-moz-linear-gradient(30deg, white, black);
+  background-image:-webkit-linear-gradient(30deg, white, black);
+  background-image:-o-linear-gradient(30deg, white, black);
+  background-image:linear-gradient(60deg, white, black);
   height: 130vh;
+  border-top: 5px solid gray;
 }
 /* Fin du slide pour l'effet parallax*/
 
@@ -287,14 +299,15 @@ div#slide3{
   color: #fff;
 }
 form {
-  margin-right: 50%;
-  width: 85%;
+
+  width: 93%;
     background: rgba(255, 255, 255, 0.6);
     box-shadow: 2px 2px 8px white, inset 35px 21px 72px grey;
     border: 1px solid #F76C6C;
     border-radius: 25px;
     display: flex;
     flex-flow: column;
+    margin: auto;
 }
 
 fieldset {
@@ -304,8 +317,7 @@ fieldset {
 input {
   display: block;
   width: 83%;
-  margin: 10px 90px;
-  margin-left: 100px;
+  margin: auto;
   border-radius: 11px;
   box-shadow: 1px 2px 2px black;
   padding-left: 5px;
@@ -313,7 +325,6 @@ input {
 }
 
 select {
-  margin-right: 90px;
   box-shadow: 1px 2px 2px black;
   width: 83%;
   /*margin-left: -92px;*/
@@ -322,10 +333,9 @@ select {
 }
 
 textarea {
-  margin-right: 90px;
   box-shadow: 1px 2px 2px black;
   width: 83%;
-  /*margin-left: -30px;*/
+  margin: auto;
   height: 87px;
   border-radius: 11px;
 }
@@ -338,7 +348,6 @@ textarea {
 }
 
 button {
-  margin-right: 90px;
 	cursor: pointer;
 	position: relative;
 	border-radius: 3.75rem;
