--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* nous appelons la police d'écriture par Google font*/
-/*@import url(https://fonts.googleapis.com/css?family=Nunito);*/
-
 *, *:before, *:after {
   box-sizing: inherit;
   }
@@ -14,45 +11,184 @@ html {
 body { 
   margin:0;
   padding:0;
+  height: 100%;
+  font-family: Manjari;
+}
+
+.container {
+  overflow-y: scroll;
+  overflow-x: hidden;
   perspective: 1px;
   transform-style: preserve-3d;
   height: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  font-family: Patrick Hand;
+  padding-left: 70px;
+}
+
+a {
+  color: #fff;
+}
+
+a:hover {
+    color: #F76C6C;
 }
 
 h1 {
    font-size: 250%;
    text-align: justify;
+   color: #fff;
+   margin-left: 50px;
 }
 
 h2 {
     font-size: 150%;
-    color : #111111;
+    color : #fff;
+    text-align: center;
 }
 
 h3 {
   font-size: 100%;
-  color : rgb(19, 18, 18);
-  text-align: justify;
+  color : #fff;
+  text-align: center;
 }
 
 p {
   font-size: 140%;
-  line-height: 150%;
-  color:rgb(19, 18, 18);
-  text-align: justify;
+  color: #fff;
+  text-align: center;
 }
 
 li {
-  color: rgb(19, 18, 18);
+  color: #fff;
   list-style-type: none;
-  text-align: justify;
+  text-align: center;
 }
+
+/* sidebar*/
+#menuToggle {
+  display: none;
+}
+.menu ul {
+  margin-top: 133px;
+}
+
+.menu ul li a {
+  color: white;
+  font-size: 17px;
+}
+
+ul#menu {
+  margin-top: 122px;
+}
+ul {
+  z-index: 2;
+}
+
+.logo img {
+  transform: translateZ(0px) scale(2) !important;
+  width: 98px;
+  height: 94px;
+  border-radius: 100%;
+  margin-top: -372px;
+  margin-left: -24px; 
+}
+
+.sidebar{
+  width: 200px;
+  height: 100%;
+  background: #39424D;
+  padding: 30px 0px;
+  display: flex;
+  flex-direction: column;
+  position:fixed;
+  z-index: 1;
+}
+
+
+.sidebar img{
+  background-image: url(https://i.imgur.com/R2msHW2.png);
+  box-shadow: none;
+}
+
+.sidebar h2{
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+​
+
+.sidebar ul li{
+  padding: 15px;
+  margin: 1%;
+  text-align: center;
+  border-bottom: 1px solid gray;
+  border-bottom: 1px solid rgba(255,255,255,0.05);
+  border-top: 1px solid rgba(255,255,255,0.05);
+  margin-right: 25%;
+}    
+
+​
+.sidebar ul li a{
+  color: #fff;
+  display: block;
+}
+
+​.sidebar ul li:hover{
+  background-color: gray;
+}
+
+.sidebar ul li:hover a{
+  color: #fff;
+}
+
+.sidebar .social_media{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.sidebar .social_media a{
+  display: inline-flex;
+  border-radius: 100%;
+  width: 0px;
+  background: gray;
+  height: 0px;
+  line-height: 45px;
+  text-align: center;
+  margin: 0 5px;
+  color: #fff;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+/*fin de la sidebar*/
+
+#slide2 .title img {
+    width: 422px;
+    height: 340px;
+    left: 41%;
+}
+
+.Map {
+    margin-top: 98px;
+    margin-left: 111px;
+}
+
+.infos {
+    margin-left: 40px;
+}
+
+/*@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}*/
 
 iframe {
   float: right;
+  margin-right: 50px;
   transform: translateZ(.4px) scale(1)           translateX(0%) translateY(-20%) rotate(0deg);
 }
 
@@ -60,11 +196,12 @@ iframe {
   display: flex;
   justify-content: center;
   z-index: 2000;
+  margin-top: 62px;
 }
 
 .Wild a img {
     display: block;
-    margin-top: -250px;
+    margin-top: -275px;
     transform: translateZ(.25px) scale(.75);
     height: 16%;
     margin-left: 55px;
@@ -91,9 +228,6 @@ img {
   -webkit-transform: translateZ(.25px) scale(.75)         translateX(-94%) translateY(-100%) rotate(2deg);
   transform: translateZ(.25px) scale(.75)         translateX(-94%) translateY(-100%) rotate(2deg);
   padding: 10px;
-  border-radius: 5px;
-  background: rgba(240,230,220, .7);
-  box-shadow: 0 0 8px rgba(0, 0, 0, .7);
 }
 
 img:last-of-type {
@@ -114,8 +248,6 @@ img:last-of-type {
   width: 50%;
   padding: 5%;
   border-radius: 5px;
-  background: rgba(240,230,220, .7);
-  box-shadow: 0 0 8px rgba(0, 0, 0, .7);
   margin-left: 38%;
 }
 
@@ -125,7 +257,7 @@ img:last-of-type {
 
 .slide:nth-child(2n+1) .title {
   margin-left: auto;
-  margin-right: 38%;
+  margin-right: 0;
 }
 
 .slide, .slide:before {
@@ -141,7 +273,7 @@ img:last-of-type {
 }
 
 #title {
-  background-image: url("https://www.set.fr/sites/default/files/Mame.jpg");
+  background-image: url(https://i.imgur.com/IadqCQt.jpg);
   z-index:2;
   border-bottom: 2px solid #F76C6C;
 }
@@ -156,7 +288,7 @@ img:last-of-type {
  text-shadow: 8px 5px 9px black;
  color: #F76C6C;
  font-family: 'Permanent Marker', cursive;
- font-size: 100px;
+ font-size: 80px;
  margin-left: 16%;
 }
 
@@ -167,42 +299,48 @@ img:last-of-type {
  transform-origin: 50% 100%;
  color: #F76C6C;
  text-shadow: 5px 8px 7px #000;
- font-family: 'Patrick Hand', cursive;
+ font-family: 'Manjari', cursive;
  font-size: 60px;
 }
 
+#title h3 {
+    -moz-transform: translateZ(.22px) scale(.80);
+    -webkit-transform: translateZ(.22px) scale(.80);
+    transform: translateZ(.22px) scale(.80);
+    transform-origin: 50% 100%;
+  }
+
 div#slide1{
-  background-image: url(https://i.imgur.com/0wNudn6.png);
+  background-color: #F76C6C;
   transform: translateZ(-1px) scale(2);
 }
-
 
 #slide1:before {
   transform: translateZ(-1px) scale(2);
 }
 #slide2 {
-  background-image: url("https://lorempixel.com/640/480/abstract/4/");
+  background-color: #F76C6C;
   z-index:2;
+  border-top: 2px solid #39424D;
+  border-bottom: 2px solid #39424D;
 }
 div#slide3{
-  background-image: url(https://i.imgur.com/4u5PR3g.png);
+  background-color: #F76C6C;
   transform: translateZ(-1px) scale(2);
   /*Ombres sous le texte*/
   text-shadow: 1px 2px 4px grey;
+  display: flex;
 }
 
 #slide4 {
-  background-image:-moz-linear-gradient(30deg, white, black);
-  background-image:-webkit-linear-gradient(30deg, white, black);
-  background-image:-o-linear-gradient(30deg, white, black);
-  background-image:linear-gradient(60deg, white, black);
+  background-color: #F76C6C;
   height: 130vh;
-  border-top: 2px solid #F76C6C;
+  border-top: 2px solid #39424D;
 }
 /* Fin du slide pour l'effet parallax*/
 
 #slide4 h2 {
-  background-color: #565656;
+  background-color: #fff;
   text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -212,13 +350,9 @@ div#slide3{
 form {
 
   width: 93%;
-    background: rgba(255, 255, 255, 0.6);
-    box-shadow: 2px 2px 8px white, inset 35px 21px 72px grey;
-    border: 1px solid #F76C6C;
-    border-radius: 25px;
-    display: flex;
-    flex-flow: column;
-    margin: auto;
+  display: flex;
+  flex-flow: column;
+  margin: auto;
 }
 
 fieldset {
@@ -229,20 +363,18 @@ input {
   display: block;
   width: 83%;
   margin: auto;
-  border-radius: 11px;
-  box-shadow: 1px 2px 2px black;
+  border-radius: 1px;
   padding-left: 5px;
   height: 39px;
 }
 
 textarea {
-  box-shadow: 1px 2px 2px black;
   width: 83%;
   margin: auto;
   height: 87px;
-  border-radius: 11px;
+  border-radius: 1px;
 }
-
+/*
 #contact-submit {
 
   float: right;
@@ -253,12 +385,11 @@ textarea {
 button {
 	cursor: pointer;
 	position: relative;
-	border-radius: 3.75rem;
-	line-height: 2.5rem;
+    line-height: 2.5rem;
+    right: 80px;
 	font-size: 2rem;
-	font-weight: 600;
-	border: 1px solid #012880;
-	background-image: linear-gradient(-180deg, #F76C6C 0%, #CC3300 100%);
+	font-weight: 500;
+	background-color: #39424D;
 	box-shadow: 0 1rem 1.25rem 0 rgba(22,75,195,0.50), 0 -0.25rem 1.5rem rgba(110, 15, 155, 1) inset, 0 0.75rem 0.5rem rgba(255,255,255, 0.4) inset, 0 0.25rem 0.5rem 0 rgba(180, 70, 207, 1) inset;
 	width: 22%;
 }
@@ -277,4 +408,364 @@ button:active {
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+*/
+
+/* essai button*/
+/*Début du code pour le bouton*/
+button {
+	cursor: pointer;
+    position: relative;
+    padding: 2.5rem 5.5rem;
+    border-radius: 3.75rem;
+    font-size: 2rem;
+    font-weight: 600;
+    border: 1px solid #012880;
+    background-image: linear-gradient(-180deg, #000 0%, #39424D 100%);
+    box-shadow: 4px 3px 10px slategrey;
+    margin-left: 35%;
+    width: 26%;
+    margin-bottom: 25px;
+    color: wheat;
+    height: 11px;
+}
+
+button#contact-submit p {
+  margin-top: -20px;
+  margin-left: -19px;
+}
+
+button span {
+	color: transparent;
+	background-image: linear-gradient(0deg, #EE82DA 0%, #FEFAFD 100%);
+	-webkit-background-clip: text;
+	background-clip: text;
+	filter: drop-shadow(0 2px 2px hsla(290, 100%, 20%, 1));
+}
+
+button::before {
+	content: "";
+	display: block;
+	height: 0.25rem;
+	position: absolute;
+	top: 0.5rem;
+	left: 50%;
+	transform: translateX(-50%);
+	width: calc(100% - 7.5rem);
+	background: #fff;
+	border-radius: 100%;
+  opacity: 0.05;
+	background-image: linear-gradient(-270deg, rgba(255,255,255,0.00) 0%, #FFFFFF 20%, #FFFFFF 80%, rgba(255,255,255,0.00) 100%);
+}
+
+button::after {
+	content: "";
+	display: block;
+	height: 0.25rem;
+	position: absolute;
+	bottom: 0.75rem;
+	left: 50%;
+	transform: translateX(-50%);
+	width: calc(100% - 7.5rem);
+	background: #fff;
+	border-radius: 100%;
+	filter: blur(1px);
+	opacity: 0.05;
+	background-image: linear-gradient(-270deg, rgba(255,255,255,0.00) 0%, #FFFFFF 20%, #FFFFFF 80%, rgba(255,255,255,0.00) 100%);
+}
+
+.button:hover { background-color: #3e8e41 }
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/*fin du code du menu*/
+/* fin code button*/
+
+/* Début Footer*/
+footer{
+    height: 196px;
+    background-color: black;
+    border-top: 3px solid #F76C66;
+  }
+  
+  .link a{
+    display: inline-flex;
+    color: white;
+    margin-left: 23%;
+    text-decoration: none;
+  }
+  
+  .link p{
+      text-align: center;
+      padding-top: 2px;
+      color: white;
+  }
+  
+  .link i{
+      height: 63px;
+      width: 16px;
+      margin-left: 100%;
+      transform: translate(228px, 2px);
+      background-image: none;
+  }
+  
+  i img {
+      height: 67px;
+      width: 67px;
+      background: none;
+      transform: translateZ(.25px) scale(.75) !important;
+      left: 78px;
+  }
+  
+  .wcs {
+      display: inline-flex;
+      margin-left: 15px;
+  }
+  
+  .wcs img {
+      height: 61px;
+      width: 97px;
+  }
+  /* Fin Footer*/
+
+@media screen and (max-width: 1024px){
+
+    h1 {
+        line-height: 100px;
+    }
+
+  .sidebar {
+    display: none;
+
+}
+
+  .container {
+    padding-left: 0;
+}
+
+.Wild a img {
+    margin-top: -373px;
+    margin-left: -58px;
+}
+
+.Map {
+    margin: 0;
+    position: relative; 
+    overflow: hidden; 
+    margin: 115px;
+    display: flex;
+    width: 373px;
+}
+
+
+.text1 p {
+    margin-left: 34px;
+}
+
+#slide2 .title p {
+    line-height: 24px;
+}
+
+.infos {
+    margin-left: -75px;
+}
+
+.title h1{
+    margin-left: -120px;
+}
+
+.title h2{
+    margin-left: 12px;
+    line-height: 36px;
+}
+  
+h1 {
+    margin-left: 90px;
+    font-size: 17px;
+}
+
+p {
+    font-size: 130%;
+    line-height: 75%;
+    color: #fff;
+}
+  
+img {
+    position: absolute;
+    top: 50%;
+    left: 41%;
+    width: 258px !important;
+    height: 199px !important;
+    -moz-transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
+    -webkit-transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
+    transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
+}
+
+/* menu burger mobile*/
+
+nav {
+    margin-top: -26px;
+  }
+  
+  #menuToggle
+  {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;
+    
+    z-index: 1;
+    
+    -webkit-user-select: none;
+    user-select: none;
+  }
+  
+  #menuToggle input
+  {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    
+    cursor: pointer;
+    
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */
+    
+    -webkit-touch-callout: none;
+  }
+  
+  /*
+   * Just a quick hamburger
+   */
+  #menuToggle span
+  {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    
+    background: #cdcdcd;
+    border-radius: 3px;
+    
+    z-index: 1;
+    
+    transform-origin: 4px 0px;
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+  
+  #menuToggle span:first-child
+  {
+    transform-origin: 0% 0%;
+  }
+  
+  #menuToggle span:nth-last-child(2)
+  {
+    transform-origin: 0% 100%;
+  }
+  
+  /* 
+   * Transform all the slices of hamburger
+   * into a crossmark.
+   */
+  #menuToggle input:checked ~ span
+  {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+  
+  /*
+   * But let's hide the middle one.
+   */
+  #menuToggle input:checked ~ span:nth-last-child(3)
+  {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  
+  /*
+   * Ohyeah and the last one should go the other direction
+   */
+  #menuToggle input:checked ~ span:nth-last-child(2)
+  {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  
+  /*
+   * Make this absolute positioned
+   * at the top left of the screen
+   */
+  #menu
+  {
+    position: absolute;
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 100px;
+    
+    background: #39424D;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+    
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+  
+  #menu {
+    margin-top: 1px;
+  }
+  
+  #menu li
+  {
+    padding: 10px 0;
+    font-size: 22px;
+  }
+  
+  /*
+   * And let's slide it in from the left
+   */
+  #menuToggle input:checked ~ ul
+  {
+    transform: none;
+  }
+  /* fin du burger menu mobile*/
+
+  .link {
+    margin-left: -74px;
+}
+
+.link p {
+    margin-left: 161px;
+    margin-top: 68px;
+}
+
+button#contact-submit {
+    padding-right: 133px;
+}
+
+button#contact-submit p {
+  margin-top: -13px;
+  margin-left: -46px;
+}
+
+i img{
+    height: 67px !important;
+    width: 67px !important;
+}
+
+div#slide3 {
+    padding-left: 83px;
 }
